8139454: java/lang/Math/WorstCaseTests.java crashes on Linux-amd64

Emit the form of pextrw that works with sse2

Reviewed-by: iveresov, twisti